--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 #game-container {
-    border: 2px solid black;
-    background-color: #f4de83;
+    border: 2px solid #000000;
+    background-color: #ffcd69;
 }
 
 body {
@@ -34,14 +34,16 @@ h1 {
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(10, 45px);
+    grid-template-columns: repeat(10,45px);
     grid-template-rows: repeat(10, 45px);
     gap: 2px;
     width: fit-content;
     margin: 20px auto;
     /* background-color: black; */
     background-image: url('https://media.craiyon.com/2025-04-28/EJ3WyEJnSECQw1A-IYcjrQ.webp');
+     background-size: cover;
     border: 2px solid black;
+    padding: 0px 30px 0px 0px;
 }
 
 .cell {
@@ -50,23 +52,25 @@ h1 {
 }
 
 .monkey {
-    background-image: url('https://previews.123rf.com/images/visible3dscience/visible3dscience1603/visible3dscience160314185/54062312-3d-rendered-illustration-of-monkey-cartoon-character-with-trolly.jpg');
+    background-image: url('../assets/monkey-handsUp-edited.png');
     background-size: cover;
+    width: 75px;
 }
 
 .banana {
-    background-image: url('https://png.pngtree.com/png-vector/20220826/ourmid/pngtree-pixel-art-banana-icon-design-vector-png-image_6122196.png');
-    background-size: cover;
+    background-image: url('https://preview.redd.it/vmzngqwrd1761.png?auto=webp&s=56bdf6b6dbc46066f3fec99e1a68b399fc6788db');
+    background-size:cover;
 }
 
-.golden {
-    background-image: url('https://png.pngtree.com/png-vector/20240726/ourlarge/pngtree-golden-banana-isolated-on-transparent-background-png-image_13239664.png');
+.gold {
+    background-image: url('https://static.vecteezy.com/system/resources/previews/019/527/049/non_2x/an-8-bit-retro-styled-pixel-art-illustration-of-gold-free-png.png');
     background-size: cover;
 }
 
 .rotten {
-    background-image: url('..assets\old-rotten-banana.png');
-    background-size: cover;
+    background-image: url('../assets/old-rotten-banana.png');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .bomb {
@@ -75,7 +79,7 @@ h1 {
 }
 
 .heart {
-    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png');
+    background-image: url('https://toppng.com/uploads/thumbnail/minecraft-heart-png-8-bits-heart-115628574854lkqwg133a.png');
     background-size: cover;
 }
 
@@ -95,7 +99,7 @@ h1 {
     font-family: "Press Start 2P", system-ui;
     font-size: 12px;
     border: 2px solid black;
-    background-color: rgb(252, 172, 205);
+    background-color: rgb(224, 90, 67);
     
 
 
@@ -106,3 +110,5 @@ button {
     margin: 5px;
     margin-bottom: 30px;
 }
+
+
