--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ h1 {
     gap: 2px;
     width: fit-content;
     margin: 20px auto;
-    /* background-color: black; */
     background-image: url('https://media.craiyon.com/2025-04-28/EJ3WyEJnSECQw1A-IYcjrQ.webp');
      background-size: cover;
     border: 2px solid black;
@@ -106,10 +105,39 @@ h1 {
 
 }
 
+#play-again{
+ padding: 7px;
+    font-family: "Press Start 2P", system-ui;
+    font-size: 12px;
+    border: 2px solid black;
+    background-color: rgb(224, 90, 67);
+}
+
 button {
     padding: 25px;
     margin: 5px;
     margin-bottom: 30px;
+}
+
+
+
+#game-over {
+  position:fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  font-size: 20px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.hidden{
+  display: none; 
 }
 
 
