--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  align-content: center;
   z-index: 9999;
 }
 
