--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
+#start-screen {
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../assets/start-background.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+#start-btn {
+    padding: 7px;
+    font-family: "Press Start 2P", system-ui;
+    font-size: 12px;
+    border: 2px solid black;
+    background-color: rgb(224, 90, 67);
+    
+}
+
+
 #game-container {
     border: 2px solid #000000;
     background-color: #ffcd69;
