--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,89 @@
 #start-screen {
     position: fixed;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     /* background-color: rgba(0, 0, 0, 0.8); */
-    background-image: url("https://media.craiyon.com/2025-04-24/7Ytq8Bw5TEeUm1N2JPMtRQ.webp") ;
+    background-image: url("https://media.craiyon.com/2025-04-24/7Ytq8Bw5TEeUm1N2JPMtRQ.webp");
     background-size: cover;
     background-position: center;
+    z-index: 999;
+
+
+}
+
+.start-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    align-content: center;
+    /* align-content: center; */
     flex-direction: column;
-    color: white;
-    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 40%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.start-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* align-content: center; */
+    /* flex-direction: column; */
+    /* color: white;
     text-shadow:
       -1px -1px 0 black,
       1px -1px 0 black,
       -1px 1px 0 black,
-      1px 1px 0 black;
-      
+      1px 1px 0 black; */
+    color: #FFEB3B;
+    font-size: 18px;
+    text-shadow:
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        2px 2px 0 #000;
 }
 
 
-
 #start-btn {
-    padding: 30px 90px;
-    border-radius: 15px;
-    background-image: url('https://cdn.pixabay.com/photo/2024/07/03/18/57/start-8870688_1280.png');
+    padding: 29px 90px;
+    border-radius: 20px;
     background-size: contain;
+    background-image: url('https://cdn.pixabay.com/photo/2024/07/03/18/57/start-8870688_1280.png');
+    /* background-image: url('/assets/start-btn.png'); */
     background-repeat: no-repeat;
-    
+
 }
 
 
 #game-container {
     border: 2px solid #000000;
-    background-color: #ffcd69;
+    background-color: #fdc860;
+    font-size: 15px;
 }
 
 body {
-   
-  font-family: "Press Start 2P", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  text-align: center;
+
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+    
 
 }
 
 h1 {
     margin-top: 30px;
-    
+    color: #000;
+    text-shadow:
+    -1px -1px 0 #FFF,
+     2px -2px 0 #FFF,
+    -2px  2px 0 #FFF,
+     2px  2px 0 #FFF;
+
 }
 
 .info {
@@ -61,19 +93,24 @@ h1 {
     margin: 0 auto;
     max-width: 70%;
     text-align: center;
+     text-shadow:
+    -1px -1px 0 #FFF,
+     1px -1px 0 #FFF,
+    -1px  1px 0 #FFF,
+     2px  2px 0 #FFF;
 }
 
 
 .grid {
     position: relative;
     display: grid;
-    grid-template-columns: repeat(10,45px);
+    grid-template-columns: repeat(10, 45px);
     grid-template-rows: repeat(10, 45px);
     gap: 2px;
     width: fit-content;
     margin: 20px auto;
     background-image: url('https://media.craiyon.com/2025-04-28/EJ3WyEJnSECQw1A-IYcjrQ.webp');
-     background-size: cover;
+    background-size: cover;
     border: 2px solid black;
     padding: 0px 30px 0px 0px;
 }
@@ -91,7 +128,7 @@ h1 {
 
 .banana {
     background-image: url('https://preview.redd.it/vmzngqwrd1761.png?auto=webp&s=56bdf6b6dbc46066f3fec99e1a68b399fc6788db');
-    background-size:cover;
+    background-size: cover;
 }
 
 .gold {
@@ -127,13 +164,13 @@ h1 {
     background-size: cover;
 }
 
-.control-btn{
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  display: flex;
-  gap: 5px;
-  z-index: 10;
+.control-btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    display: flex;
+    gap: 5px;
+    z-index: 10;
 }
 
 #restart-btn {
@@ -144,28 +181,28 @@ h1 {
 }
 
 
-#pause-btn{
-    padding: 0px ;
+#pause-btn {
+    padding: 0px;
     font-family: "Press Start 2P", system-ui;
     font-size: 24px;
-
     border: 2px solid black;
 }
 
-#play-again{
- padding: 7px;
+#play-again {
+    padding: 10px;
+    border-radius: 6px;
     font-family: "Press Start 2P", system-ui;
-    font-size: 12px;
+    font-size: 14px;
     border: 2px solid black;
-    background-color: rgb(224, 90, 67);
+    background-color: rgb(59, 203, 102);
 }
 
-.control-monkey-btn{
+.control-monkey-btn {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     max-width: 40%;
-   
+
 }
 
 button {
@@ -177,23 +214,32 @@ button {
 
 
 #game-over {
-  position:fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  font-size: 20px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  align-content: center;
-  z-index: 9999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-size: 18px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    z-index: 9999;
 }
 
-.hidden{
-  display: none; 
+h2 {
+    color: #fecd2b;
+    font-size: 35px;
+     text-shadow:
+     1px 1px 0 #222,
+        2px 2px 0 #000000,
+        3px 3px 0 #0015fa,
+        4px 6px 0 #fe0000;
+    
 }
 
-
+.hidden {
+    display: none;
+}
